--- a/static/index.html
+++ b/static/index.html
@@ -40,7 +40,7 @@
         <span class="tooltiptext">WikiLoult</span>
     </div>
     <div class="icon" id="menu_display">
-        <img class="" id="gear" src="img/icons/roue-crantee.svg">
+        <img class="" id="gear" src="img/icons/roue-crantee.svg" >
         <span class="tooltiptext">Menu</span>
     </div>
     <div class="icon" id="userswitch">
@@ -110,27 +110,19 @@
         <button id="change-cookie">Changer le cookie</button>
         <input id="cookie"/>
     </div>
-    <div id="mediaembed">
-        <div>
-            <span>Vidéo/image</span>
-        </div>
-        <div>
+    <div>
+            <span id="mediaembed">Vidéo/image</span>
             <input type="checkbox" id="embed">
-        </div>
-    </div>
-    <div id="automute">
-        <div>
-            <span>Automute</span>
-        </div>
-        <div>
+            <span id="automute">Automute</span>
             <input type="checkbox" id="am">
-        </div>
     </div>
     <div id="menu-footer">
         <a href="https://loult.family/magnacharta.html" target="_blank">Charte</a>
         <a href="https://github.com/loult-elte-fwere/loult-ng" target="_blank">Github</a>
-        <a href="http://loult.wordpress.com" target="_blank"><img class="pokeball pokeballMenu" src="img/icons/pokeball.svg" /> Blog</a>
+        <a href="http://loult.wordpress.com" target="_blank"><img class="pokeball pokeballMenu"
+                src="img/icons/pokeball.svg" /> Blog</a>
     </div>
+
 </div>
 
 </body>
