sauvegarde taf chgt poké

--- a/static/index.html
+++ b/static/index.html
@@ -93,6 +93,14 @@
         </select>
     </div>
     <div>
+        <span>Pokémons</span>
+        <select id="poketype">
+            <option value="mini">Icones</option>
+            <option value="small">Original</option>
+            <option value="medium">Miwmiw</option>
+        </select>
+    </div>
+    <div>
         <span>Historique</span>
         <select id="history">
             <option value="full">full</option>
