mise à jouw pokedex

--- a/static/index.html
+++ b/static/index.html
@@ -133,10 +133,31 @@
 
 <div class="wiki-popover popover-display-false" id="wiki-last-edits">
     <div id="wiki-popover-head">
-        <p>Wikiloult</p>
+        <img src="img/logo-wikiloult.svg" width="120" height="18">
         <p><a href="http://wiki.loult.family/last_edits">Derniers Articles Modifiés</a></p>
     </div>
     <ul id="articles-list">
+
+        <li>
+            <h3><a href="http://wiki.loult.family/page/oknwenwerce">Ok nwe nwe rce</a></h3>
+            <p>Modif par <span style="color: rgb(110, 229, 45);">Caratroc soleilleux</span> le 2020-08-03</p>
+        </li>
+        <li>
+            <h3><a href="http://wiki.loult.family/page/pwteketchwpe">Pwteketchwpe</a></h3>
+            <p>Modif par <span style="color: rgb(229, 45, 71);">Goupix ravi</span> le 2020-07-21</p>
+        </li>
+        <li>
+            <h3><a href="http://wiki.loult.family/page/pschnwwllzee">pschnwwllzeeeeee</a></h3>
+            <p>Modif par <span style="color: rgb(45, 227, 229);">Scorplane brioché</span> le 2020-07-20</p>
+        </li>
+        <li>
+            <h3><a href="http://wiki.loult.family/page/holographic">L'Hypothèse holographique</a></h3>
+            <p>Modif par <span style="color: rgb(45, 229, 106);">Métamorph gentil</span> le 2020-07-18</p>
+        </li>
+        <li>
+            <h3><a href="http://wiki.loult.family/page/pschnwwllzee">pschnwwllzeeeeee</a></h3>
+            <p>Modif par <span style="color: rgb(229, 45, 71);">Goupix ravi</span> le 2020-07-20</p>
+        </li>
 
     </ul>
     <div id="wiki-popover-footer">
