--- a/static/index.html
+++ b/static/index.html
@@ -140,7 +140,7 @@
 
         <li>
             <h3><a href="http://wiki.loult.family/page/oknwenwerce">Ok nwe nwe rce</a></h3>
-            <p>Modif par <span style="color: rgb(110, 229, 45);">Caratroc soleilleux</span> le 2020-08-03</p>
+            <p>Modif par <span style="color: rgb(110, 229, 45);">Caratroc soleilleux soleilleux</span> le 2020-08-03</p>
         </li>
         <li>
             <h3><a href="http://wiki.loult.family/page/pwteketchwpe">Pwteketchwpe</a></h3>
