Misajouw des liens vers le wiki pour passer en https
Former-commit-id: 72dfb6b0a3d56828e0512fd22e2f6967b5751feb

--- a/static/index.html
+++ b/static/index.html
@@ -134,13 +134,13 @@
 <div class="wiki-popover popover-display-false" id="wiki-last-edits">
     <div id="wiki-popover-head">
         <img src="img/logo-wikiloult.svg" width="120" height="18">
-        <p><a href="http://wiki.loult.family/last_edits" target="_blank">Derniers Articles Modifiés</a></p>
+        <p><a href="https://wiki.loult.family/last_edits" target="_blank">Derniers Articles Modifiés</a></p>
     </div>
     <ul id="articles-list">
     </ul>
     <div id="wiki-popover-footer">
-        <p><a href="http://wiki.loult.family/" target="_blank">Accueil Du Wiki</a></p>
-        <p><a href="http://wiki.loult.family/page/create" target="_blank">Ajouter un article</a></p>
+        <p><a href="https://wiki.loult.family/" target="_blank">Accueil Du Wiki</a></p>
+        <p><a href="https://wiki.loult.family/page/create" target="_blank">Ajouter un article</a></p>
     </div>
 </div>
 
