--- a/static/index.html
+++ b/static/index.html
@@ -67,7 +67,7 @@
         <select id="theme">
             <option value="bibw">Bibw</option>
             <option value="cozy">Toumiwmiw</option>
-            <option value="compact">Old school</option>
+            <!--option value="compact">Old school</option-->
             <option value="console">Minitel</option>
             <option value="fat">Phat Katz</option>
         </select>
@@ -78,7 +78,7 @@
             <option value="night">Nwuiw</option>
             <option value="day">Jouw</option>
             <option value="retro">Zenennw</option>
-            <option value="retro_night">Noiw</option>
+            <!--option value="retro_night">Noiw</option-->
             <option value="blue">Emixam</option>
         </select>
     </div>
@@ -96,6 +96,7 @@
             <option value="mini">Icones</option>
             <option value="small">Original</option>
             <option value="medium">Miwmiw</option>
+            <!--option value="big">Giga</option-->
         </select>
     </div>
     <div>
