Réparation et mise à jour de l'ensemble du CSS
Former-commit-id: b1e7b0c1f3954b55b99bb871cfda4d7de98afada

--- a/static/index.html
+++ b/static/index.html
@@ -45,7 +45,7 @@
                 </a>
                 <span class="tooltiptext">Accéder à la BNL</span>
             </div>
-            <div class="footer-menu-icon" id="userswitch">
+            <div class="footer-menu-icon" id="userlist-toggle">
                 <img id="pokeball" src="img/icons/masterball.svg"/>
                 <span class="tooltiptext">Liste utilisateurs</span>
             </div>
@@ -61,11 +61,11 @@
                 <img src="img/icons/flute.svg"/>
                 <span class="tooltiptext">son</span>
             </div>
-            <div class="footer-menu-icon" id="menu_display">
+            <div class="footer-menu-icon" id="menu-gear-display">
                 <img class="" id="gear" src="img/icons/roue-crantee.svg">
                 <span class="tooltiptext">Menu</span>
             </div>
-            <div class="footer-menu-icon" id="wiki_display">
+            <div class="footer-menu-icon" id="menu-wiki-display">
                 <img id="pokedex" src="img/icons/pokedex.svg"/>
                 <span class="tooltiptext">WikiLoult</span>
             </div>
@@ -112,7 +112,6 @@
             <option value="night">Nwuiw</option>
             <option value="day">Jouw</option>
             <option value="retro">Zenennw</option>
-            <!--option value="retro_night">Noiw</option-->
             <option value="blue">Emixam</option>
         </select>
     </div>
@@ -159,8 +158,10 @@
     <div id="popover-menu-footer">
         <a href="https://loult.family/magnacharta.html" target="_blank">Charte</a>
         <a href="https://github.com/loult-elte-fwere/loult-ng" target="_blank">Github</a>
-        <a href="http://loult.wordpress.com" target="_blank"><img class="pokeball pokeballMenu"
-                                                                  src="img/icons/pokeball.svg"/> Blog</a>
+        <a href="http://loult.wordpress.com" target="_blank">
+            <img class="pokeball menu-blog-pokeball"
+                 src="img/icons/pokeball.svg"/>
+            Blog</a>
     </div>
 
 </div>
