misajouw du cretrqe
Former-commit-id: f05895eee9d1a79c2c563a74dd949be83e900a80

--- a/static/index.html
+++ b/static/index.html
@@ -111,7 +111,7 @@
         <select id="color">
             <option value="night">Nwuiw</option>
             <option value="day">Jouw</option>
-            <option value="retro">Zenennw</option>
+            <!--option value="retro">Zenennw</option-->
             <option value="blue">Emixam</option>
         </select>
     </div>
