--- a/static/index.html
+++ b/static/index.html
@@ -146,7 +146,7 @@
         </select>
     </div>
     <div id="cookie-set">
-        <button id="change-cookie">Changer le cookie</button>
+        <button id="change-cookie"><div><span>Changer <br/>le cookie</span><img id="cookie_icon" src="img/icons/cookie.svg"></div></button>
         <input id="cookie"/>
     </div>
     <div>
